//
// Tables protobuffer specification
//

syntax = "proto3";

option go_package = "./proto";

package tables.v1;

// API for managing tables.
service Tables {
    // Create a table. All followers will automatically replicate the table.
    // This procedure is available only in the leader cluster.
    rpc CreateTable(CreateTableRequest) returns (CreateTableResponse);

    // Delete a table. All followers will automatically delete the table.
    // This procedure is available only in the leader cluster.
    rpc DeleteTable(DeleteTableRequest) returns (DeleteTableResponse);

    // Get names of all the tables present in the cluster.
    // This procedure is available in both leader and follower clusters.
    rpc GetTables(GetTableRequest) returns (GetTablesResponse);
}

// CreateTableRequest describes the table to be created.
message CreateTableRequest {
    // Name of the table to be created.
    bytes table = 1;
}

// CreateTableResponse describes the newly created table.
message CreateTableResponse {
    // Shard ID the created table.
    uint64 shard_id = 1;
}

// DeleteTableRequest describes the table to be deleted.
message DeleteTableRequest {
    // Name of the table to be deleted.
    bytes table = 1;
}

message DeleteTableResponse {}

message GetTableRequest {}

// TableInfo describes a single table.
message TableInfo {
    // Name of the table.
    bytes table = 1;

    // Shard ID of the table.
    uint64 shard_id = 2;
}

// FollowerGetTablesResponse contains information about tables stored in the cluster.
message GetTablesResponse {
    repeated TableInfo tables = 1;
}
